added pagination to archive.html

--- a/archive.html
+++ b/archive.html
@@ -117,6 +117,23 @@
 		</div>
 	</section>
 
+	<section class="py-3">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 text-center">
+					<a href="#" class="btn btn-green rounded-pill text-white mx-05">
+						<span class="fa fa-long-arrow-alt-left me-05" aria-hidden="true"></span>
+						Starsze
+					</a>
+					<a href="#" class="btn btn-green rounded-pill text-white mx-05">
+						Nowsze
+						<span class="fa fa-long-arrow-alt-right me-05" aria-hidden="true"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </main>
 
 <footer class="py-2 bg-gray footer">
