added banner section to archive.html

--- a/archive.html
+++ b/archive.html
@@ -134,6 +134,21 @@
 		</div>
 	</section>
 
+	<section class="py-5 bg-green banner banner--image" style="background-image: url('./dist/img/desk-1900w.webp');">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-10 mx-auto text-center banner__content">
+					<h2 class="h3 text-white">
+						Masz pytania? Chętnia na nie odpowiem i rozwieję ewentualne wątpliwości. Jestem do dyspozycji. Stwórzmy razem coś ekstra!
+					</h2>
+					<a href="#" class="btn btn-white rounded-pill">
+						Kontakt
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </main>
 
 <footer class="py-2 bg-gray footer">
