added margin to image in archive.html

--- a/archive.html
+++ b/archive.html
@@ -65,7 +65,7 @@
 			<ul class="row d-flex flex-column gap-2 main-posts">
 				<li class="col-12">
 					<div class="row align-items-center">
-						<a href="#" class="col-md-6 promo__figure">
+						<a href="#" class="col-md-6 mb-1 mb-md-0 promo__figure">
 							<img src="./dist/img/people-1900w.webp" alt="people" class="promo__image single-main-post__image">
 						</a>
 						<article class="col-md-6 mb-3 mb-md-0">
@@ -90,7 +90,7 @@
 				</li>
 				<li class="col-12">
 					<div class="row flex-row-reverse align-items-center">
-						<a href="#" class="col-md-6 promo__figure">
+						<a href="#" class="col-md-6 mb-1 mb-md-0 promo__figure">
 							<img src="./dist/img/palete-1900w.webp" alt="people" class="promo__image single-main-post__image">
 						</a>
 						<article class="col-md-6 mb-3 mb-md-0">
