--- a/archive.html
+++ b/archive.html
@@ -120,14 +120,14 @@
 	<section class="pb-3">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 text-center">
-					<a href="#" class="btn btn-green rounded-pill text-white mx-05">
-						<span class="fa fa-long-arrow-alt-left me-05" aria-hidden="true"></span>
+				<div class="col-12 d-flex flex-row flex-wrap gap-05 justify-content-center">
+					<a href="#" class="btn btn-green rounded-pill text-white">
+						<!-- <span class="fa fa-long-arrow-alt-left me-05" aria-hidden="true"></span> -->
 						Starsze
 					</a>
-					<a href="#" class="btn btn-green rounded-pill text-white mx-05">
+					<a href="#" class="btn btn-green rounded-pill text-white">
 						Nowsze
-						<span class="fa fa-long-arrow-alt-right me-05" aria-hidden="true"></span>
+						<!-- <span class="fa fa-long-arrow-alt-right ms-05" aria-hidden="true"></span> -->
 					</a>
 				</div>
 			</div>
