--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div class="row align-items-stretch">
 				<div class="col-md-4 mb-2">
 					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
-						<span class="fa fa-gem text-green mb-1 cards__icon" aria-hidden="true"></span>
+						<span class="fa fa-desktop text-green mb-1 cards__icon" aria-hidden="true"></span>
 						<h3 class="h4">
 							Tworzenie stron w oparciu o CMS Wordpress
 						</h3>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="col-md-4 mb-2">
 					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
-						<span class="fa fa-gem text-green mb-1 cards__icon" aria-hidden="true"></span>
+						<span class="fa fa-code text-green mb-1 cards__icon" aria-hidden="true"></span>
 						<h3 class="h4">
 							Kodowanie szablonów PSD do HTML i CSS
 						</h3>
@@ -117,7 +117,7 @@
 				</div>
 				<div class="col-md-4 mb-2">
 					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
-						<span class="fa fa-gem text-green mb-1 cards__icon" aria-hidden="true"></span>
+						<span class="fa fa-palette text-green mb-1 cards__icon" aria-hidden="true"></span>
 						<h3 class="h4">
 							Przygotowanie projektów graficznych
 						</h3>
