changes in cards structure added timeline

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 		</div>
 	</header>
 
-	<section class="cards">
-		<header class="container py-5 header header--center">
-			<div class="row">
+	<section class="py-5">
+		<div class="container">
+			<header class="row pb-5 header header--center">
 				<div class="col-md-8 mx-auto text-center">
 					<span class="text-uppercase text-green">
 						Oferta
@@ -86,47 +86,51 @@
 						W czym mogę pomóc?
 					</h2>
 					<p>
-						Lorem ipsum dolor sit, amet, consectetur adipisicing elit. Explicabo debitis enim recusandae eaque officia officiis perspiciatis quo alias consequatur autem ipsam, aliquid!
+						Zależy mi na dostarczaniu wysokiej jakości projektów i budowaniu długotrwałych relacji. Jak mogę Ci pomóc?
 					</p>
 				</div>
-			</div>
-		</header>
-		<div class="container pb-3">
-			<div class="row align-items-stretch">
-				<div class="col-md-4 mb-2">
+			</header>
+			<ul class="row align-items-stretch justify-content-center cards">
+				<li class="col-md-4">
 					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
-						<span class="fa fa-desktop text-green mb-1 cards__icon" aria-hidden="true"></span>
-						<h3 class="h4">
-							Tworzenie stron w oparciu o CMS Wordpress
-						</h3>
+						<header>
+							<span class="fa fa-desktop text-green mb-1 cards__icon" aria-hidden="true"></span>
+							<h3 class="h4">
+								Tworzenie stron w oparciu o CMS Wordpress
+							</h3>
+						</header>
 						<p>
 							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, beatae quaerat. Temporibus eum architecto fugit ratione, rem. Eum perferendis.
 						</p>
 					</article>
-				</div>
-				<div class="col-md-4 mb-2">
+				</li>
+				<li class="col-md-4">
 					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
-						<span class="fa fa-code text-green mb-1 cards__icon" aria-hidden="true"></span>
-						<h3 class="h4">
-							Kodowanie szablonów PSD do HTML i CSS
-						</h3>
+						<header>
+							<span class="fa fa-code text-green mb-1 cards__icon" aria-hidden="true"></span>
+							<h3 class="h4">
+								Kodowanie szablonów PSD do HTML i CSS
+							</h3>
+						</header>
 						<p>
 							Dolor sit amet, consectetur adipisicing elit. Non eveniet dignissimos illo nostrum. Eos, a est, repellendus voluptate, minus assumenda fuga eaque non adipisci dolorum odio praesentium eum, unde cum.
 						</p>
 					</article>
-				</div>
-				<div class="col-md-4 mb-2">
+				</li>
+				<li class="col-md-4">
 					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
-						<span class="fa fa-palette text-green mb-1 cards__icon" aria-hidden="true"></span>
-						<h3 class="h4">
-							Przygotowanie projektów graficznych
-						</h3>
+						<header>
+							<span class="fa fa-code text-green mb-1 cards__icon" aria-hidden="true"></span>
+							<h3 class="h4">
+								Kodowanie szablonów PSD do HTML i CSS
+							</h3>
+						</header>
 						<p>
-							Consectetur adipisicing elit. Nostrum ducimus at placeat animi labore itaque dolore, sequi amet doloremque perspiciatis quod sed ab debitis recusandae dignissimos magnam iste corrupti culpa.
+							Dolor sit amet, consectetur adipisicing elit. Non eveniet dignissimos illo nostrum. Eos, a est, repellendus voluptate, minus assumenda fuga eaque non adipisci dolorum odio praesentium eum, unde cum.
 						</p>
 					</article>
-				</div>
-			</div>
+				</li>
+			</ul>
 		</div>
 	</section>
 
@@ -156,7 +160,7 @@
 			<div class="row align-items-center">
 				<header class="col-md-6 mb-3 mb-md-0">
 					<h2>
-						Szablony z PSD przekówam na statyczną stronę w html i css
+						Szablony z PSD przekuwam na statyczną stronę w html i css
 					</h2>
 					<p>
 						Consectetur adipisicing elit. Beatae cumque, sequi aperiam tenetur commodi facere quasi fugit facilis. Itaque omnis exercitationem tenetur consequuntur, quod aperiam dolorem amet iste nemo, voluptates.
