--- a/page.html
+++ b/page.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-1 py-md-2">
 	<div class="container">
 		<a href="#" class="navbar-brand mb-0 h4">
-				<span class="text-green">Grzegorz</span> Pokorski
+			<span class="text-green">Grzegorz</span> Pokorski
 		</a>
 		<button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -66,8 +66,8 @@
 <main>
 
 	<section>
-		<header class="container py-5 header header--center">
-			<div class="row">
+		<div class="container">
+			<header class="row py-5 header header--center">
 				<div class="col-md-8 mx-auto text-center">
 					<span class="text-uppercase text-green">
 						Kluczowe cechy
@@ -76,15 +76,13 @@
 						Co wyróżnia moje strony?
 					</h2>
 					<p>
-						Zależy mi na dostarczaniu wysokiej jakości projektów i budowaniu długotrwałych relacji. Jak mogę Ci pomóc?
+						Dobra strona internetowa to nie tylko wyrafinowany design - to również technologie oraz narzędzia czyniące ją prostą w obsłudze.
 					</p>
 				</div>
-			</div>
-		</header>
-		<div class="container pb-3">
-			<ul class="row features">
-				<li class="col-md-6 col-lg-4">
-					<article class="shadow feature">
+			</header>
+			<ul class="row pb-3 justify-content-center features">
+				<li class="col-md-6 col-xl-4">
+					<article class="shadow d-flex flex-row align-items-center bg-white feature">
 						<div class="feature__icon-wrapper">
 							<span class="fa fa-users feature__icon" aria-hidden="true"></span>
 						</div>
@@ -93,8 +91,8 @@
 						</h3>
 					</article>
 				</li>
-				<li class="col-md-6 col-lg-4">
-					<article class="shadow feature">
+				<li class="col-md-6 col-xl-4">
+					<article class="shadow d-flex flex-row align-items-center bg-white feature">
 						<div class="feature__icon-wrapper">
 							<span class="fa fa-car feature__icon" aria-hidden="true"></span>
 						</div>
@@ -103,8 +101,8 @@
 						</h3>
 					</article>
 				</li>
-				<li class="col-md-6 col-lg-4">
-					<article class="shadow feature">
+				<li class="col-md-6 col-xl-4">
+					<article class="shadow d-flex flex-row align-items-center bg-white feature">
 						<div class="feature__icon-wrapper">
 							<span class="fa fa-code feature__icon" aria-hidden="true"></span>
 						</div>
@@ -113,8 +111,8 @@
 						</h3>
 					</article>
 				</li>
-				<li class="col-md-6 col-lg-4">
-					<article class="shadow feature">
+				<li class="col-md-6 col-xl-4">
+					<article class="shadow d-flex flex-row align-items-center bg-white feature">
 						<div class="feature__icon-wrapper">
 							<span class="fa fa-desktop feature__icon" aria-hidden="true"></span>
 						</div>
@@ -123,18 +121,8 @@
 						</h3>
 					</article>
 				</li>
-				<li class="col-md-6 col-lg-4">
-					<article class="shadow feature">
-						<div class="feature__icon-wrapper">
-							<span class="fa fa-gem feature__icon" aria-hidden="true"></span>
-						</div>
-						<h3 class="h5 mb-0 p-1">
-							Użądzenia mobilne na pierwszym miejscu, pełna responsywność
-						</h3>
-					</article>
-				</li>
-				<li class="col-md-6 col-lg-4">
-					<article class="shadow feature">
+				<li class="col-md-6 col-xl-4">
+					<article class="shadow d-flex flex-row align-items-center bg-white feature">
 						<div class="feature__icon-wrapper">
 							<span class="fa fa-tooth feature__icon" aria-hidden="true"></span>
 						</div>
@@ -144,6 +132,91 @@
 					</article>
 				</li>
 			</ul>
+		</div>
+	</section>
+
+	<section class="bg-white-green py-5">
+		<div class="container">
+			<header class="row pb-5 header header--center">
+				<div class="col-md-8 mx-auto text-center">
+					<span class="text-uppercase text-green">
+						Współpraca
+					</span>
+					<h2 class="header__title header__title--center">
+						Przebieg realizacji zlecenia
+					</h2>
+					<p>
+						Jasne i przejrzyste zasady współpracy od samego początku pozwalają realizować zlecenia zgodnie z wymaganiami klienta bez przykrych niespodzianek.
+					</p>
+				</div>
+			</header>
+			<ol class="row align-items-stretch justify-content-center cards">
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 cards__item">
+						<header class="d-flex gap-05 ">
+							<span class="h4 text-green cards__marker" aria-hidden="true">1.</span>
+							<h3 class="h4">
+								Brief
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, beatae quaerat. Temporibus eum architecto fugit ratione, rem. Eum perferendis.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 cards__item">
+						<header class="d-flex gap-05 ">
+							<span class="h4 text-green cards__marker" aria-hidden="true">2.</span>
+							<h3 class="h4">
+								Formalności
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor, sit, amet consectetur adipisicing elit. Earum nulla harum ex, minima quod pariatur inventore minus, corrupti sapiente dignissimos reprehenderit exercitationem quaerat veritatis ipsa! Mollitia numquam optio illo ab.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 cards__item">
+						<header class="d-flex gap-05 ">
+							<span class="h4 text-green cards__marker" aria-hidden="true">3.</span>
+							<h3 class="h4">
+								Projekt graficzny
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, beatae quaerat. Temporibus eum architecto fugit ratione, rem. Eum perferendis.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 cards__item">
+						<header class="d-flex gap-05 ">
+							<span class="h4 text-green cards__marker" aria-hidden="true">4.</span>
+							<h3 class="h4">
+								Programowanie
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, beatae quaerat. Temporibus eum architecto fugit ratione, rem. Eum perferendis.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 cards__item">
+						<header class="d-flex gap-05 ">
+							<span class="h4 text-green cards__marker" aria-hidden="true">5.</span>
+							<h3 class="h4">
+								Finalizacja współpracy
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, beatae quaerat. Temporibus eum architecto fugit ratione, rem. Eum perferendis.
+						</p>
+					</article>
+				</li>
+			</ol>
 		</div>
 	</section>
 
