added some content

--- a/page.html
+++ b/page.html
@@ -48,22 +48,139 @@
 <header class="bg-white-green py-5 page-header">
 	<div class="container">
 		<div class="row align-items-center">
-			<div class="col-md-5 text-md-start mb-2 mb-md-0">
+			<div class="col-md-6 col-lg-5 text-md-start mb-2 mb-md-0">
 				<h1 class="h1">
 					Strony interntowe w oparciu o system CMS <span class="text-green">Wordpress</span>
 				</h1>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam laudantium a temporibus. Eveniet nam, molestiae ea accusamus delectus id, quae maiores odio quas quod quibusdam, modi deleniti recusandae dolor aperiam. Pariatur at quidem impedit eveniet.
+					Pełna kontrola nad stroną bez konieczności posiadania specjalistycznej wiedzy - brzmi dobrze? Zapraszam do zapoznania się z innymi korzyściami wynikającymi z posiadania strony opartej o system zarządania treścia Wordpress.
 				</p>
+				<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+						<a href="#" class="btn btn-green text-white rounded-pill">
+							Chcę taką!
+						</a>
+						<a href="#main" class="btn btn-gray rounded-pill">
+							Więcej informacji
+						</a>
+					</div>
 			</div>
-			<figure class="col-md-7 promo__figure">
+			<figure class="col-md-6 col-lg-7 promo__figure">
 				<img src="./dist/img/comp-1900w.webp" alt="happy customers" class="promo__image">
 			</figure>
 		</div>
 	</div>
 </header>
 
-<main>
+<main id="main">
+
+	<section class="py-5">
+		<article class="container">
+			<header class="row pb-2">
+				<div class="col me-auto">
+					<span class="text-uppercase text-green">
+						Strony internetowe w Wordpress
+					</span>
+					<h2 class="h2">
+						Dlaczego warto mieć stronę internetową popartą o system zarządania treścią Wordpress?
+					</h2>
+				</div>
+			</header>
+			<div class="row">
+				<div class="col-md-12 custom-content custom-content--col-2">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur expedita optio facere minima dolorem eos quia ad saepe itaque recusandae reprehenderit dolores sequi quo.
+					</p>
+					<ul>
+						<li>
+							Wordpress
+						</li>
+						<li>
+							Advanced custom fields PRO
+						</li>
+					</ul>
+					<p>
+						Praesentium unde fuga fugit debitis expedita.
+					</p>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae quam similique, corrupti rem distinctio eaque ullam, sit quasi saepe, explicabo, ratione? Doloribus fugiat harum et ad nesciunt voluptate voluptatum. Architecto?
+					</p>
+					<p>
+						Babore, quidem repellat recusandae. Debitis assumenda tempora impedit quam, eaque maiores dignissimos sunt, non!
+					</p>
+					<h3>
+						Hello from the other side
+					</h3>
+					<ol>
+						<li>
+							Ipsum dolor sit amet consectetur adipisicing elit. Sit neque unde velit suscipit alias reiciendis, necessitatibus id est repudiandae, illo assumenda architecto adipisci, quaerat rerum delectus. Perferendis laborum commodi, nesciunt?
+						</li>
+						<li>
+							Sapiente non odio doloribus corporis distinctio temporibus, obcaecati dolore dolorem aspernatur adipisci earum amet rem aliquid voluptatum, dolor.
+						</li>
+					</ol>
+				</div>
+			</div>
+		</article>
+	</section>
+
+	<section class="py-5 bg-white-green">
+		<div class="container">
+			<header class="row pb-5 header header--center">
+				<div class="col-md-8 mx-auto text-center">
+					<span class="text-uppercase text-green">
+						Korzyści
+					</span>
+					<h2 class="header__title header__title--center">
+						Jakie korzyści ma posiadanie strony opartej o Wordpress?
+					</h2>
+					<p>
+						Zależy mi na dostarczaniu wysokiej jakości projektów i budowaniu długotrwałych relacji. Jak mogę Ci pomóc?
+					</p>
+				</div>
+			</header>
+			<ul class="row align-items-stretch justify-content-center cards">
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
+						<header>
+							<span class="fa fa-laptop-code text-green mb-1 cards__icon" aria-hidden="true"></span>
+							<h3 class="h4">
+								Edycja nie wymaga umiejetności programowania
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, beatae quaerat. Temporibus eum architecto fugit ratione, rem. Eum perferendis.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
+						<header>
+							<span class="fa fa-users text-green mb-1 cards__icon" aria-hidden="true"></span>
+							<h3 class="h4">
+								Możliwość delegowania zadań innym użytkownikom
+							</h3>
+						</header>
+						<p>
+							Dolor sit amet, consectetur adipisicing elit. Non eveniet dignissimos illo nostrum. Eos, a est, repellendus voluptate, minus assumenda fuga eaque non adipisci dolorum odio praesentium eum, unde cum.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-4">
+					<article class="bg-white rounded shadow p-2 h-100 text-center cards__item">
+						<header>
+							<span class="fa fa-fingerprint text-green mb-1 cards__icon" aria-hidden="true"></span>
+							<h3 class="h4">
+								Elastyczność i możliwość dostosowywania wyglądu
+							</h3>
+						</header>
+						<p>
+							Dolor sit amet, consectetur adipisicing elit. Non eveniet dignissimos illo nostrum. Eos, a est, repellendus voluptate, minus assumenda fuga eaque non adipisci dolorum odio praesentium eum, unde cum.
+						</p>
+					</article>
+				</li>
+			</ul>
+		</div>
+	</section>
 
 	<section class="py-5">
 		<div class="container">
@@ -105,6 +222,16 @@
 					<article class="shadow d-flex flex-row align-items-center bg-white feature">
 						<div class="feature__icon-wrapper">
 							<span class="fa fa-code feature__icon" aria-hidden="true"></span>
+						</div>
+						<h3 class="h5 mb-0 p-1">
+							Użądzenia mobilne na pierwszym miejscu, pełna responsywność
+						</h3>
+					</article>
+				</li>
+				<li class="col-md-6 col-xl-4">
+					<article class="shadow d-flex flex-row align-items-center bg-white feature">
+						<div class="feature__icon-wrapper">
+							<span class="fa fa-rocket feature__icon" aria-hidden="true"></span>
 						</div>
 						<h3 class="h5 mb-0 p-1">
 							Użądzenia mobilne na pierwszym miejscu, pełna responsywność
@@ -223,7 +350,7 @@
 	<section class="py-5">
 		<article class="container">
 			<header class="row pb-2">
-				<div class="col-md-8 me-auto">
+				<div class="col me-auto">
 					<span class="text-uppercase text-green">
 						Kluczowe cechy
 					</span>
@@ -234,9 +361,6 @@
 			</header>
 			<div class="row">
 				<div class="col-md-12 custom-content custom-content--col-2">
-					<h3>
-						Lorem, ipsum, dolor sit amet consectetur adipisicing elit.
-					</h3>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur expedita optio facere minima dolorem eos quia ad saepe itaque recusandae reprehenderit dolores sequi quo.
 					</p>
