--- a/single.html
+++ b/single.html
@@ -162,7 +162,7 @@
 						<header>
 							<a href="#">
 								<h3 class="h4">
-									Wykonuję witryny w oparciu o dedykowany szablon w Wordpress
+									Jak sama nazwa wskazuje – są to bloki Gutenberga, które mogą pełnić rolę kontenera na inne
 								</h3>
 							</a>
 						</header>
@@ -182,7 +182,7 @@
 						<header>
 							<a href="#">
 								<h3 class="h4">
-									Wykonuję witryny w oparciu o dedykowany szablon w Wordpress
+									Różnice pomiędzy blokami statycznymi, a dynamicznymi
 								</h3>
 							</a>
 						</header>
