--- a/page.html
+++ b/page.html
@@ -55,7 +55,7 @@
 				<p>
 					Pełna kontrola nad stroną bez konieczności posiadania specjalistycznej wiedzy - brzmi dobrze? Zapraszam do zapoznania się z innymi korzyściami wynikającymi z posiadania strony opartej o system zarządania treścia Wordpress.
 				</p>
-				<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+				<div class="d-flex flex-row flex-wrap gap-05 justify-content-start">
 						<a href="#" class="btn btn-green text-white rounded-pill">
 							Chcę taką!
 						</a>
