redesign section with process

--- a/page.html
+++ b/page.html
@@ -45,12 +45,12 @@
 	</div>
 </nav>
 
-<header class="bg-white-green py-5 page-header">
+<header class="bg-white-green py-5">
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-md-6 col-lg-5 text-md-start mb-2 mb-md-0">
 				<h1 class="h1">
-					Strony interntowe w oparciu o system CMS <span class="text-green">Wordpress</span>
+					Strony interntowe w oparciu o system CMS Wordpress
 				</h1>
 				<p>
 					Pełna kontrola nad stroną bez konieczności posiadania specjalistycznej wiedzy - brzmi dobrze? Zapraszam do zapoznania się z innymi korzyściami wynikającymi z posiadania strony opartej o system zarządania treścia Wordpress.
@@ -395,6 +395,65 @@
 				</div>
 			</div>
 		</article>
+	</section>
+
+		<section class="py-5">
+		<div class="container">
+			<header class="row">
+				<div class="col-md-8 mx-auto text-center">
+					<span class="text-uppercase text-green">
+						Oferta
+					</span>
+					<h2 class="header__title header__title--center">
+						W czym mogę pomóc?
+					</h2>
+					<p>
+						Zależy mi na dostarczaniu wysokiej jakości projektów i budowaniu długotrwałych relacji. Jak mogę Ci pomóc?
+					</p>
+				</div>
+			</header>
+			<ul class="row mt-5 process">
+				<li class="d-flex flex-column process__item">
+					<article class="col-10 col-md-5 process__inner">
+						<header class="d-flex flex-row process__header">
+							<span class="h3 text-green me-1">1.</span>
+							<h3>
+								Brief
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius, aspernatur quos dolorum molestiae reprehenderit facilis excepturi quibusdam quisquam sint explicabo eligendi dolor numquam non corporis, et assumenda iusto eveniet.
+						</p>
+					</article>
+				</li>
+				<li class="d-flex flex-column process__item">
+					<article class="col-10 col-md-5 process__inner">
+						<header class="d-flex flex-row process__header">
+							<span class="h3 text-green me-1">1.</span>
+							<h3>
+								Brief
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius, aspernatur quos dolorum molestiae reprehenderit facilis excepturi quibusdam quisquam sint explicabo eligendi dolor numquam non corporis, et assumenda iusto eveniet.
+						</p>
+					</article>
+				</li>
+				<li class="d-flex flex-column process__item">
+					<article class="col-10 col-md-5 process__inner">
+						<header class="d-flex flex-row process__header">
+							<span class="h3 text-green me-1">1.</span>
+							<h3>
+								Brief
+							</h3>
+						</header>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius, aspernatur quos dolorum molestiae reprehenderit facilis excepturi quibusdam quisquam sint explicabo eligendi dolor numquam non corporis, et assumenda iusto eveniet.
+						</p>
+					</article>
+				</li>
+			</ul>
+		</div>
 	</section>
 
 	<section class="py-5 bg-green banner banner--image" style="background-image: url('./dist/img/desk-1900w.webp');">
