--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<section class="py-5">
 		<div class="container">
-			<header class="row pb-5 header header--center">
+			<header class="row pb-5">
 				<div class="col-md-8 mx-auto text-center">
 					<span class="text-uppercase text-green">
 						Oferta
