--- a/index-2.html
+++ b/index-2.html
@@ -49,18 +49,18 @@
 
 <main>
 	
-	<header class="bg-white-green py-5 hero hero--image" style="background-image: url('./dist/img/people-1900w.webp');">
+	<header class="bg-white-green py-5">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-md-5 text-center text-md-start mb-1 mb-md-0 hero__content text-white">
-					<h2 class="h1 text-white">
+				<div class="col-md-5 text-center text-md-start mb-1 mb-md-0">
+					<h2 class="h1">
 						Projekuję oraz tworzę nowoczesne strony internetowe
 					</h2>
 					<p>
 						Zachęcam do zapoznania się z moją ofertą oraz do kontaktu. Zrubmy razem coś niesamowitego!
 					</p>
 					<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-						<a href="#" class="btn btn-white rounded-pill">
+						<a href="#" class="btn btn-green text-white rounded-pill">
 							Kontakt
 						</a>
 						<a href="#" class="btn btn-gray rounded-pill">
@@ -68,7 +68,7 @@
 						</a>
 					</div>
 				</div>
-				<figure class="col-md-7 hero__content">
+				<figure class="col-md-7">
 					<img src="./dist/img/hero-1900w.webp" alt="happy customers" class="img-fluid">
 				</figure>
 			</div>
